[package]
name = "gql-sql-test"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
async-graphql = { version = "2.8", features = ["dataloader", "uuid", "chrono"] }
